# crypto-live-loader

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DECISIONS.md  Makefile  README.md  RISKS.md  TIMELINE.md  config.yaml  pyproject.toml
api/: cli.py  constants.py  logging_common.py  runtime.py
api/commands/: __init__.py  bronze.py  runtime.py
domain/: __init__.py  contracts.py  models.py
ingestion/: artifact_io.py  artifact_state.py  config.py  file_lock.py  futures_summary.py  futures_summary_lake.py  gold.py  http_client.py  incremental.py  index_price.py  index_price_gold.py  index_price_lake.py  index_price_silver.py  instrument_metadata.py  instrument_metadata_gold.py  instrument_metadata_lake.py  instrument_metadata_silver.py  l2.py  lake.py  lake_writer.py  normalization.py  option_instrument_ticker.py  option_instrument_ticker_lake.py  option_l2.py  option_l2_lake.py  option_ticker_universe.py  options.py  options_gold.py  options_lake.py  options_silver.py  parquet_repository.py  plotting.py  polars_parquet_store.py  recent_trades.py  recent_trades_lake.py  silver.py  volatility_index.py  volatility_index_lake.py
ingestion/exchanges/: deribit_l2.py
scripts/: migrate_bronze_hourly_layout.py
sources/: __init__.py  deribit_futures.py  deribit_index_price.py  deribit_instruments.py  deribit_option_order_book.py  deribit_option_ticker.py  deribit_options.py  deribit_trades.py  deribit_volatility_index.py  registry.py
sources/deribit/: __init__.py  adapter.py  public_api.py
tests/: test_architecture.py  test_bronze_hourly_migration.py  test_cli_futures_summary.py  test_cli_index_price.py  test_cli_index_price_transforms.py  test_cli_instrument_metadata.py  test_cli_instrument_metadata_transforms.py  test_cli_lock.py  test_cli_option_instrument_ticker.py  test_cli_option_l2.py  test_cli_options.py  test_cli_options_gold.py  test_cli_options_silver.py  test_cli_recent_trades.py  test_cli_volatility_index.py  test_command_runtime.py  test_config.py  test_deribit_adapter.py  test_deribit_futures.py  test_deribit_index_price.py  test_deribit_instruments.py  test_deribit_option_order_book.py  test_deribit_option_ticker.py  test_deribit_options.py  test_deribit_public_api.py  test_deribit_trades.py  test_deribit_volatility_index.py  test_file_lock.py  test_futures_summary.py  test_futures_summary_lake.py  test_gold.py  test_http_client.py  test_index_price_gold.py  test_index_price_lake.py  test_index_price_silver.py  test_instrument_metadata_gold.py  test_instrument_metadata_lake.py  test_instrument_metadata_silver.py  test_l2.py  test_lake.py  (+17 more)
