[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-live-loader"
version = "0.1.0"
description = "Framework for crypto L2 and market data ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib~=3.10.0",
  "polars~=1.36.1",
  "pyarrow~=24.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy~=1.20.2",
  "pyright~=1.1.407",
  "pytest~=9.0.3",
  "ruff~=0.15.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "ingestion*",
  "api*",
  "domain*",
  "sources*",
]
exclude = ["tests*", "notebooks*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q --strict-config --strict-markers"
filterwarnings = ["error"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "."
exclude = ["notebooks/"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["api", "domain", "ingestion", "sources", "main.py"]
exclude = ["notebooks"]
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportImportCycles = "error"
reportImplicitOverride = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "warning"
