[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-live-loader"
version = "0.1.0"
description = "Framework for crypto L2 and market data ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib~=3.10.0",
  "polars~=1.36.1",
  "pyarrow~=24.0.0",
]

[project.optional-dependencies]
dev = [
  "coverage~=7.14.1",
  "import-linter~=2.11",
  "interrogate~=1.7.0",
  "mypy~=1.20.2",
  "pre-commit~=4.6.0",
  "pydoclint~=0.8.6",
  "pyright~=1.1.407",
  "pytest~=9.0.3",
  "ruff~=0.15.12",
  "ty~=0.0.44",
  "uv~=0.11.19",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "ingestion*",
  "api*",
  "domain*",
  "sources*",
]
exclude = ["tests*", "notebooks*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q --strict-config --strict-markers"
filterwarnings = ["error"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "."
exclude = ["notebooks/"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["api", "domain", "ingestion", "sources", "main.py"]
exclude = ["notebooks"]
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportImportCycles = "error"
reportImplicitOverride = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "warning"

[tool.coverage.run]
source = ["api", "domain", "ingestion", "sources"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.interrogate]
exclude = ["scripts", "tests"]
fail-under = 95
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = false
ignore-nested-functions = true
ignore-private = true
ignore-property-decorators = true
ignore-semiprivate = true
quiet = true

[tool.pydoclint]
style = "google"
check-return-types = true
check-yield-types = true
